# calc-rs

./: .gitignore  Cargo.toml  LICENCE  README.md  build.sh  calc.c  calc.h
src/: decimal.rs  interpret.rs  lexeme.rs  lib.rs  main.rs  parsing.rs
src/interpreter/: interpret.rs  lexeme.rs  mod.rs  parsing.rs
src/number/: decimal.rs  mod.rs
